--- a/.env
+++ b/.env
@@ -31,5 +31,7 @@ DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name
 # For Gmail as a transport, use: "gmail://username:password@localhost"
 # For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
 # Delivery is disabled by default via "null://localhost"
-MAILER_URL=null://localhost
+# Example below :
+MAILER_URL=smtp://smtp.live.com:587?encryption=tls&auth_mode=login&username= [yourAddress@domain.com] &password= [passwordMail]
+MAILER_FROM_ADDRESS= [yourAddress@domain.com]
 ###< symfony/swiftmailer-bundle ###
