fix spaces error in .env

--- a/.env
+++ b/.env
@@ -32,6 +32,6 @@ DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name
 # For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
 # Delivery is disabled by default via "null://localhost"
 # Example below :
-MAILER_URL=smtp://smtp.live.com:587?encryption=tls&auth_mode=login&username= [yourAddress@domain.com] &password= [passwordMail]
+MAILER_URL=smtp://smtp.live.com:587?encryption=tls&auth_mode=login&username=XXX&password=XXX
 MAILER_FROM_ADDRESS= [yourAddress@domain.com]
 ###< symfony/swiftmailer-bundle ###
