fix final error space in .env

--- a/.env
+++ b/.env
@@ -33,5 +33,5 @@ DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name
 # Delivery is disabled by default via "null://localhost"
 # Example below :
 MAILER_URL=smtp://smtp.live.com:587?encryption=tls&auth_mode=login&username=XXX&password=XXX
-MAILER_FROM_ADDRESS= [yourAddress@domain.com]
+MAILER_FROM_ADDRESS=XXX
 ###< symfony/swiftmailer-bundle ###
